[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/attack_buttons/stick_button_pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/attack_buttons/stick_button.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/attack_buttons/kick_button_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/attack_buttons/kick_button.png" type="Texture" id=4]
[ext_resource path="res://src/scripts/AttackButtons.gd" type="Script" id=5]

[node name="AttackButtons" type="Control"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StickAttackButton" type="TouchScreenButton" parent="."]
position = Vector2( -18, -2 )
normal = ExtResource( 2 )
pressed = ExtResource( 1 )

[node name="KickAttackButton" type="TouchScreenButton" parent="."]
position = Vector2( 2, -14 )
normal = ExtResource( 4 )
pressed = ExtResource( 3 )

[connection signal="pressed" from="StickAttackButton" to="." method="_on_StickAttackButton_pressed"]
[connection signal="released" from="StickAttackButton" to="." method="_on_StickAttackButton_released"]
[connection signal="pressed" from="KickAttackButton" to="." method="_on_KickAttackButton_pressed"]
[connection signal="released" from="KickAttackButton" to="." method="_on_KickAttackButton_released"]
